--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
            <input type="password" id="pass" name="pass" placeholder="Contraseña" class="inputcss">
            <input type="text" id="telefono" name="telefono" placeholder="Teléfono (911111111)" class="inputcss">
            <input type="submit" value="Registrar" class="btn-enviar pointer">
-           <h3 id="resultado"></h3>
+           <h3 id="resultado">
+           </h3>
        </div>
     </form>
 </body>
